--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -21,9 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://15.206.69.109:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>nanny@980</sonar.password> 
+		<sonar.host.url>http://13.233.252.90:9000/</sonar.host.url>
+		<sonar.login>squ_e7e0689b4edff034d40c27d646148a97c42f04b3</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -98,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.64.125:8081/repository/repo-release/</url>
+	      <url>http://13.233.254.104:8081/repository/repo-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.233.64.125:8081/repository/repo-snapshot/</url>
+	      <url>http://13.233.254.104:8081/repository/repo-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
